# ambientor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  deny.toml
.cursor/rules/: git-commits.mdc
.github/workflows/: ci.yml  e2e-kind.yml  images.yml  openshift-smoke.yml
config/crd/: kustomization.yaml
config/crd/bases/: ambientor.io_ambientassessments.yaml  ambientor.io_clusterconnections.yaml  ambientor.io_clusters.yaml  ambientor.io_meshinventories.yaml  ambientor.io_migrationplans.yaml  ambientor.io_policytranslations.yaml  ambientor.io_rollouts.yaml
config/samples/: ambientor_v1alpha1_cluster.yaml  ambientor_v1alpha1_clusterconnection.yaml  ambientor_v1alpha1_migrationplan_selection.yaml
crates/ambientor-analyze/: Cargo.toml
crates/ambientor-analyze/src/: lib.rs  traffic.rs  translate.rs
crates/ambientor-api/: Cargo.toml
crates/ambientor-api/src/: authz.rs  main.rs  state.rs
crates/ambientor-api/src/routes/: applications.rs  assess.rs  assessment_crd.rs  assessments.rs  audit.rs  auth.rs  connections.rs  dashboard.rs  health.rs  mesh_instances.rs  mod.rs  openshift.rs  plans.rs  rollout_watch.rs  rollouts.rs  scans.rs  sse.rs
crates/ambientor-auth/: Cargo.toml
crates/ambientor-auth/src/: jwt.rs  lib.rs  oidc.rs  oidc_flow.rs  password.rs  rbac.rs  service.rs
crates/ambientor-cli/: Cargo.toml
crates/ambientor-cli/src/: main.rs  mesh_cmd.rs  plan_cmd.rs  rollout_cmd.rs  sarif.rs
crates/ambientor-core/: Cargo.toml
crates/ambientor-core/src/: inventory.rs  lib.rs  migrate_doc.rs  rules.rs  scoring.rs
crates/ambientor-dashboard/: Cargo.toml
crates/ambientor-dashboard/src/: application_types.rs  applications.rs  assess_run.rs  cluster_ref_meta.rs  compute.rs  dashboard_from_run.rs  dataplane.rs  deep_analysis.rs  findings_attribution.rs  lib.rs  types.rs
crates/ambientor-db/: Cargo.toml
crates/ambientor-db/migrations/: 001_init.sql  002_casbin_rule.sql  003_dashboard_multicluster.sql  004_application_assessments.sql  005_application_dataplane_mode.sql  006_cluster_findings.sql  007_application_identity.sql
crates/ambientor-db/src/: applications.rs  assessment_sync.rs  backend.rs  dashboard.rs  lib.rs  pool.rs  repository.rs  scan.rs  traits.rs
crates/ambientor-k8s/: Cargo.toml
crates/ambientor-k8s/src/: cache.rs  client.rs  connection_meta.rs  lib.rs  platform.rs  remote.rs  spoke_access.rs
crates/ambientor-k8s/src/testdata/: spoke-test-ca-bundle.pem
crates/ambientor-mesh/: Cargo.toml
crates/ambientor-mesh/src/: ambient_trust.rs  application_identity.rs  backend.rs  dynamic.rs  ingress_collect.rs  inventory.rs  istio.rs  lib.rs  mesh_enrollment.rs  mesh_instances.rs  openshift.rs  openshift_wizard.rs  platform_scan.rs  policy_collect.rs  revision_tags.rs  version.rs  workload_scan.rs
crates/ambientor-mesh/tests/: policy_inventory_fixture.rs
crates/ambientor-operator/: Cargo.toml
crates/ambientor-operator/src/: main.rs
crates/ambientor-operator/src/controllers/: assessment.rs  cluster.rs  context.rs  dashboard.rs  hub.rs  inventory.rs  migration_plan.rs  mod.rs  policy_translation.rs  rollout.rs  runtime.rs
crates/ambientor-plan/: Cargo.toml
crates/ambientor-plan/src/: export.rs  lib.rs  namespaces.rs  planner.rs
crates/ambientor-rollout/: Cargo.toml
crates/ambientor-rollout/src/: apply.rs  audit.rs  engine.rs  events.rs  ingress.rs  labels.rs  lib.rs  openshift_rbac.rs  openshift_route.rs  policy.rs  preflight.rs  restart.rs  rollback.rs  verify.rs  waypoint.rs
crates/ambientor-scan/: Cargo.toml
crates/ambientor-scan/src/: depth.rs  lib.rs  readiness.rs  registry.rs  sidecar.rs
crates/ambientor-scan/tests/: depth_fixture.rs  fixture_assessment.rs  sidecar_fixture.rs
crates/ambientor-scan/tests/fixtures/: depth_rules.json  mixed_mode.json  sidecar_workloads.json
crates/ambientor-types/: Cargo.toml
crates/ambientor-types/src/: crd.rs  dto.rs  lib.rs
crates/ambientor-web/: Cargo.toml
crates/ambientor-web/assets/: app.js  index.html  mockup-dashboard.html  style.css
crates/ambientor-web/src/: main.rs
deploy/helm/ambientor/: Chart.yaml  values-e2e.yaml  values-lab.yaml  values-openshift-dev.yaml  values-openshift-pilot.yaml  values.yaml
deploy/helm/ambientor/templates/: _helpers.tpl  api.yaml  ingress.yaml  namespace.yaml  openshift-scc.yaml  operator.yaml  postgresql.yaml  rbac.yaml  secret.yaml  (+2 more)
docs/: PROGRESS.md  git-conventions.md  runbook-lab.md  runbook-openshift-pilot.md  runbook-pilot.md
docs/adr/: 001-in-cluster-deployment.md  002-mesh-enrollment.md  003-dashboard-multicluster-persistence.md  004-application-assessment-catalog.md
docs/architecture/: README.md
docs/images/logo/: README.md
docs/lab/: bookinfo-e2e.yaml  clusterconnection-spoke.example.yaml  kind-config-e2e.yaml  kind-config.yaml  meshinventory-bookinfo.yaml  spoke-hub-reader-rbac.yaml  spoke-hub-remote-rbac.yaml
docs/pilot/: allowlist-blockers.txt.example
docs/roadmap/: assessment-depth-rules.md  assessment-evidence-and-rules.md  cli-plan-export.md  cli-sarif-export.md  e2e-kind-ambient.md  ghcr-images.md  helm-production.md  hub-aggregation.md  lab-validation.md  logo-variants.md  mesh-inventory-istio-crds.md  migration-plan-controller.md  oidc-auth.md  openshift-olm.md  operator-informers.md  performance-informer-cache.md  platform-ci.md  pluggable-db.md  policy-translation.md  portal-assessment-dashboard.md  portal-oidc.md  portal-plan-review.md  postgres-scan-persistence.md  quay-images.md  rbac-postgres.md  rollout-approvals-api-ui.md  rollout-audit-log.md  rollout-rollback-revert.md  rollout-waypoint-and-verify.md
scripts/: dev-build-push.sh  e2e-kind-ambient.sh  generate-logo-variants.sh  lab-build-images.sh  lab-kind-down.sh  lab-kind-up.sh  lab-load-kind.sh  openshift-cleanup.sh  openshift-pilot-install.sh  openshift-pilot-smoke.sh  pilot-analyze-blockers.sh  pilot-contexts.example  pilot-ensure-selection-plan.sh  pilot-export-plans.sh  pilot-record-assessment.sh  pilot-validate.sh  spoke-export-hub-credentials.sh
scripts/git-hooks/: commit-msg  prepare-commit-msg
