[workspace]
resolver = "2"
members = [
    "crates/ambientor-types",
    "crates/ambientor-core",
    "crates/ambientor-k8s",
    "crates/ambientor-mesh",
    "crates/ambientor-scan",
    "crates/ambientor-analyze",
    "crates/ambientor-plan",
    "crates/ambientor-rollout",
    "crates/ambientor-db",
    "crates/ambientor-auth",
    "crates/ambientor-api",
    "crates/ambientor-operator",
    "crates/ambientor-cli",
    "crates/ambientor-web",
]
default-members = ["crates/ambientor-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/arencloud/ambientor"
rust-version = "1.95.0"

[workspace.dependencies]
ambientor-analyze = { path = "crates/ambientor-analyze" }
ambientor-api = { path = "crates/ambientor-api" }
ambientor-auth = { path = "crates/ambientor-auth" }
ambientor-core = { path = "crates/ambientor-core" }
ambientor-db = { path = "crates/ambientor-db" }
ambientor-k8s = { path = "crates/ambientor-k8s" }
ambientor-mesh = { path = "crates/ambientor-mesh" }
ambientor-operator = { path = "crates/ambientor-operator" }
ambientor-plan = { path = "crates/ambientor-plan" }
ambientor-rollout = { path = "crates/ambientor-rollout" }
ambientor-scan = { path = "crates/ambientor-scan" }
ambientor-types = { path = "crates/ambientor-types" }
ambientor-web = { path = "crates/ambientor-web" }

anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
casbin = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
jsonwebtoken = "9"
k8s-openapi = { version = "0.24", features = ["latest", "schemars"] }
kube = { version = "0.99", features = ["runtime", "derive", "client", "ws"] }
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_router = "0.7"
openidconnect = "4"
schemars = { version = "0.8", features = ["chrono", "url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster dev builds for large workspace
incremental = true
