[package]
name = "ambientor-analyze"
description = "Traffic and policy compatibility analyzer for ambient migration"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-core = { workspace = true }
ambientor-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
