[package]
name = "ambientor-core"
description = "Shared domain logic, rules engine, and scoring for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-types = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
