[package]
name = "ambientor-dashboard"
description = "Migration dashboard computation from cluster state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-core = { workspace = true }
ambientor-k8s = { workspace = true }
ambientor-mesh = { workspace = true }
ambientor-types = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true, features = ["derive"] }
