[package]
name = "ambientor-db"
description = "Postgres persistence and migrations for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-types = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = ["postgres"]
postgres = []
