[package]
name = "ambientor-k8s"
description = "Kubernetes client utilities and platform detection for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
