[package]
name = "ambientor-mesh"
description = "Istio and OpenShift Service Mesh adapters for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-core = { workspace = true }
ambientor-k8s = { workspace = true }
ambientor-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
