[package]
name = "ambientor-plan"
description = "Migration planner with ordered waves for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-core = { workspace = true }
ambientor-types = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
