[package]
name = "ambientor-rollout"
description = "Staged rollout engine with approval gates and rollback for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ambientor-analyze = { workspace = true }
ambientor-mesh = { workspace = true }
ambientor-plan = { workspace = true }
ambientor-types = { workspace = true }
chrono = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
