[package]
name = "ambientor-types"
description = "Kubernetes CRD types and shared DTOs for Ambientor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
